resolving PR Comments